--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -1,9 +1,9 @@
 pipeline {
   agent {
-    docker {
-      image 'abhishekf5/maven-abhishek-docker-agent:v1'
-      args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
-    }
+     docker {
+            image 'maven:3-alpine' // or any other image you need
+            args '-v /var/run/docker.sock:/var/run/docker.sock' // optional: if you need to use Docker within Docker
+        }
   }
   stages {
     stage('Checkout') {
